--- a/research/try.ipynb
+++ b/research/try.ipynb
@@ -3,7 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b417743",
+   "id": "f037f14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd5bda1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +21,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "KIDNEYS",
+   "display_name": "kidney",
    "language": "python",
    "name": "python3"
   },
