--- a/research/prepare_base_model.ipynb
+++ b/research/prepare_base_model.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2a1b8a01",
    "metadata": {},
    "outputs": [],
@@ -173,10 +173,10 @@
     "    def _prepare_full_model(model, classes, freeze_all, freeze_till, learning_rate):\n",
     "        if freeze_all:\n",
     "            for layer in model.layers:\n",
-    "                model.trainable = False\n",
+    "                layer.trainable = False\n",
     "        elif (freeze_till is not None) and (freeze_till >0):\n",
     "            for layer in model.layers[:-freeze_till]:\n",
-    "                model.trainable = False\n",
+    "                layer.trainable = False\n",
     "        flatten_in= tf.keras.layers.Flatten()(model.output)\n",
     "        prediction = tf.keras.layers.Dense(\n",
     "            units=classes,\n",
