--- a/research/04_model_evaluation.ipynb
+++ b/research/04_model_evaluation.ipynb
@@ -2,27 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f037f14c",
+   "execution_count": 1,
+   "id": "bc38f908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ae47a693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'c:\\\\Users\\\\Fakhar-E-Iqbal\\\\Documents\\\\Kidney-Disease-Classification-MLFlow-DVC'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "%pwd"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd5bda1",
+   "id": "51ef5f43",
    "metadata": {},
    "outputs": [],
    "source": []
